# frameforge

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  COACH-SYNTHESIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  FIXTURE-STATUS.md  Makefile  POC-01.md  POC-02.md  POC-03.md  POC-04.md  POC-05.md  POC-09.md  PURPOSE.md  README.md  RELEASE.md  RENDERER-PATCH.md  SECURITY.md  architecture-map.fg.yaml  closed_region_detector.py  codebase-standards.md  conceptual-analysis.md  conftest.py  consensus_regions.py  docker-compose.yml  frameforge-api-rename-map.md  framegraph-ide-annotated.fg.yaml  framegraph_to_html.py  mkdocs.yml  pyproject.toml  region_fill.py  (+5 more)
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
brand/: framegraph-logo.fg.yaml  framegraph.tokens.fg.yaml
demo/: brand-book.md
docker/: README.md  collect-google-fonts.sh  entrypoint.sh  fonts.apt.txt  mcp.docker.json
docs/: .gitignore  BRAND.md  FIXTURE-STATUS.md  adr-0001-backend-neutral-rendering.md  adr-0002-sdk-lags-core-delivery.md  adr-0003-backend-neutral-flow-layout.md  adr-0004-single-engine-layout.md  adr-0005-3d-scene-graph.md  adr-0006-no-injected-style.md  adr-0007-layout-feedback.md  architecture-map.fg.yaml  architecture.md  bhag-pixel-perfect-4k.md  book-corpus-scope.md  capability-manifest.json  capability_tour_book.py  codebase-standards.md  desktop-cowork-setup.md  error-codes.md  examples.md  frameforge-seed.fg.yaml  frameforge-vector-recreation-improvements.md  framegraph-sdk-proposal.md  framegraph-seed.fg.yaml  framegraph-vector-recreation-improvements.md  illustration-protocol.md  index.md  library.md  migration-v01.md  output-space.md  patterns-fills.md  pixel-perfect-pass1.json  plugin-windows-setup.md  prompt-implement-from-roadmap.md  request.md  roadmap-draft.md  roadmap.md  sdk-api.md  sdk.md
examples/: a4_diagrammation.py  ai_mobile_app_wireframe.py  ai_workforce_storyboard.py  animate_svg.py  architecture_brief.py  architecture_map.py  asset_recolor_guide.py  atlantis_adventure_game.py  brand_book.py  brand_book_figures.py  capability_tour_book.py  clip_and_lettering_demo.py  coach_demo.py  coach_icon_set.py  coach_paint_showcase.py  coach_pipeline.py  coopera_refactor_wireframes.py  cs_suite_wireframe.py  design_trends_2026.py  doc_ray_a4_reference.py  doc_ray_database.py  docfield_logo.py  dune_arrakis_codex.py  esfera_refactor_wireframes.py  fg_css_optimize.py  fields_lattices_manifolds.py  food_tracking_ai_app.py  framegraph_logo.py  framegraph_seed_deck.py  geometry_topology_deck.py  gorilla_stencil_document.py  guided_paint.py  imperial_doctrine_deck.py  inova_partners_whitepaper.py  king_kong_gorilla.py  king_kong_manga.py  landing_headers.py  layout_mechanisms_deck.py  layout_methods_book.py  layout_methods_chapter.py  (+45 more)
fixtures/: README.md  ai-workforce-storyboard.fg.yaml  anthropic_claude_deck_improved.framegraph.yml  atlantis-adventure-game.fg.yaml  calendar-3day.fg.yaml  clip-paths.fg.yaml  coopera-refactor-wireframes.fg.yaml  cs-suite-wireframe.fg.yaml  css-filters.fg.yaml  css-stylesheet.fg.yaml  css-theme-cards.fg.yaml  css-utility-classes.fg.yaml  dune-arrakis-codex.fg.yaml  elevation-shadows.fg.yaml  esfera-refactor-wireframes.fg.yaml  esfera_improved.framegraph.yml  fields-lattices-manifolds.fg.yaml  filter-lighting.fg.yaml  font-faces-100.fg.yaml  font-faces.fg.yaml  imperial-doctrine-deck.fg.yaml  king-kong-gorilla.fg.yaml  king-kong-manga.fg.yaml  meridian-consulting-deck.fg.yaml  ninja-hacker-manga.fg.yaml  nyt-mideast-live.fg.yaml  practitioner-ai-deck.fg.yaml  rebel-alliance-field-manual.fg.yaml  sdk-3d-scene.fg.yaml  sdk-clip-and-lettering.fg.yaml  sdk-layout-stacks.fg.yaml  sdk-symbol-instancing.fg.yaml  spacecraft-catalog.fg.yaml  standard-model.fg.yaml  stratoscope.fg.yaml  style-cards.fg.yaml  table-rows.fg.yaml  tables.fg.yaml  topology-perspective.fg.yaml  trebuchet-engineering-drawings.fg.yaml  (+4 more)
framegraph/: __init__.py  cli.py
grammar/: framegraph-v2-style.ebnf  framegraph-v2.ebnf
models/: framegraph.py
plugin/: .mcp.json
recipe/: README.md  __init__.py  __main__.py  analysis.py  graph.py  model.py  parse.py  report.py  sign.py
reports/: f1-threejs-vs-frameforge.md  f1-threejs-vs-framegraph.md  frameforge-codebase-report.md  framegraph-codebase-report.md  mcp-large-argument-transport-defect.md
schema/: build_schema.py  framegraph-v2.schema.json
spec/: framegraph-v2-spec.md
static/: frameforge-studio-sitemap.yaml  framegraph-studio-sitemap.yaml
tests/: test_a11y_render.py  test_accessibility.py  test_anchor_frames.py  test_arrow_markers.py  test_audit.py  test_band_shading.py  test_brand_logo_fresh.py  test_bullet_list_spacing.py  test_canvas_format.py  test_canvas_handoffs.py  test_capability_manifest.py  test_changelog_citations.py  test_chromium_renderer.py  test_ci_make_check_sync.py  test_coach.py  test_coach_compose.py  test_coach_paint.py  test_coach_redraw.py  test_coach_style_params.py  test_codemod.py  test_codemod_v01.py  test_collision_detector.py  test_connectors.py  test_construction_geometry.py  test_cross_backend_fidelity.py  test_doc_drift_guards.py  test_doc_examples.py  test_doc_links.py  test_doc_tooling.py  test_docker_contract.py  test_docs_in_sync.py  test_document_backends.py  test_document_params.py  test_effects.py  test_element_render.py  test_elements.py  test_env_var_docs.py  test_fetch_book_corpus.py  test_fg_css_optimize.py  test_fg_font.py  (+221 more)
tooling/: bump_version.py  check_accessibility.py  check_brand_sync.py  check_disclaimers.py  check_doc_links.py  check_grammar_sync.py  check_package_readiness.py  check_public_readiness.py  check_spec_sync.py  check_symbol_drift.py  codemod.py  cross_backend_fidelity.py  fetch_book_corpus.py  fetch_corpus.py  fg_font.py  frameforge_render.py  framegraph_render.py  gen_capability_manifest.py  gen_docs.py  gen_examples_index.py  gen_status.py  hyperrealistic_canvas.py  install_fonts.py  mathjax_tex_to_svg.mjs  pdf_to_frameforge_yml.py  rename_project.py  (+10 more)
(+728 files in other folders)
