[project]
name = "framegraph"
version = "2.3.0"
description = "FrameGraph v2 — HEAD toolchain: Pydantic models (source of truth), generated JSON schema, validator, codemod, and the dependency-free SVG / matplotlib proxy renderers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    # Runtime core: the models are Pydantic v2; documents load via PyYAML
    # (PyYAML also parses JSON, so it covers .json / .yaml / .yml fixtures).
    "pydantic>=2",
    "pyyaml>=6",
    # Justified flow layout hyphenates with Liang patterns (ADR-0003). Pure
    # Python, bundles its dictionaries, deterministic → reproducible golden.
    "pyphen>=0.15",
]

# The render front-door (framegraph/cli.py): `framegraph-render <doc> --to <target>`
# lists every render path and dispatches to it (`--list` shows live availability).
# Declared here so it becomes a console command once the project is installable;
# today this is a virtual project (`[tool.uv] package = false`), so use the
# self-bootstrapping launcher: `uv run python tooling/framegraph_render.py ... --to pdf`
# (no PYTHONPATH needed; `python -m framegraph.cli` also works once src/docs are on the path).
[project.scripts]
framegraph-render = "framegraph.cli:main"
fg-font = "framegraph.fontpack:main"

# Optional/auxiliary sets (PEP 735). uv installs `dev` by default on `uv sync`;
# install an auxiliary set explicitly, e.g.:
#   uv sync --group render   # matplotlib proxy renderer (tooling/render_fg_doc.py)
#   uv sync --group browser  # Headless Chromium raster renderer (tooling/render_chromium.py)
#   uv sync --group pdf      # PyMuPDF, for the PDF -> FrameGraph transpiler
# or run one-off without syncing: `uv run --group pdf python tooling/pdf_to_framegraph_yml.py ...`
#
# LaTeX/TikZ renderer (tooling/render_latex.py) — NO extra Python deps: it parses
# documents with the core PyYAML and shells out to a system TeX engine (plus
# poppler's `pdftoppm` for --png). It works out of the box with either toolchain;
# `--engine auto` prefers lualatex + luaotfload and otherwise falls back to the
# more widely available pdflatex (the fontspec preamble is rewritten automatically).
#   Debian/Ubuntu system packages:
#     apt install texlive-latex-recommended texlive-pictures \
#                 texlive-fonts-recommended poppler-utils    # pdflatex path
#     apt install texlive-luatex                             # optional: lualatex path
#   then:  uv run python tooling/render_latex.py fixtures/<doc>.fg.yaml --png
[dependency-groups]
dev = [
    "hypothesis>=6",
    "pytest>=8",
]
render = ["matplotlib>=3.7", "pillow>=10"]
browser = ["playwright>=1.44"]
pdf = ["pymupdf>=1.24"]
# FrameGraph -> PDF: combine a document's solved SVG pages into one vector PDF
# (tooling/render_pdf.py). Distinct from the `pdf` group above, which is for PDF
# *input* (the PDF -> FrameGraph transpiler). Optional and only imported by that
# tool, so core rendering stays dependency-free.
pdfout = ["cairosvg>=2.7", "pypdf>=4"]
# Real font-advance metrics for accurate text wrap/fit (framegraph.sdk.measure_text
# and render_fixtures.py --real-metrics). Optional: absent it, callers fall back to
# the per-character estimate, so core rendering stays dependency-free (§13).
metrics = ["fonttools>=4"]
# Model Context Protocol server boundary for AI coding feedback loops. Optional:
# the core SDK and renderers do not import it unless framegraph.mcp.create_server()
# is called. CairoSVG is the browser-free PNG rasterizer the render tools fall back
# to when headless Chromium is absent, so a vision model can still see — and thus
# verify — a render without the `browser` group.
mcp = ["mcp[cli]>=1.27,<2", "cairosvg>=2.7"]
# Computer-vision lane: propose draft FrameGraph documents from images/PDF pages
# (framegraph.vision). Optional and lazily imported — the classical detectors and
# OCR only load when a propose tool runs; the VLM lane needs no extra dependency
# (stdlib HTTP). `pytesseract` additionally needs the system Tesseract binary;
# PDF input reuses the `pdf` group. numpy ships with opencv.
vision = ["opencv-python-headless>=4.9", "pillow>=10", "pytesseract>=0.3.10"]

[tool.uv]
# Virtual project: manage the venv + dependencies, but do NOT build/install this
# tree as a package. The repo runs via `sys.path`-rooted scripts (src layout:
# the package lives in src/framegraph), and an installed `framegraph`
# distribution would shadow the `docs/models/framegraph.py` module that
# validate.py / tests import as `framegraph`.
package = false

# This environment's package index serves a CORRUPT starlette==1.3.1 (a
# SyntaxError in starlette/datastructures.py) which uv resolves for the `mcp`
# group and which breaks the FastMCP import chain. `mcp` only needs
# starlette>=0.27, so force a clean build. Remove once the index stops serving
# the broken 1.3.1.
override-dependencies = ["starlette<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
