[project]
name = "frameforge"
version = "2.5.0"
description = "FrameForge v2 — HEAD toolchain: Pydantic models (source of truth), generated JSON schema, validator, codemod, and the dependency-free SVG / matplotlib proxy renderers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pedro Anisio Silva", email = "pedroanisio@gmail.com" }]
keywords = ["document", "graphics", "dsl", "svg", "diagram", "pydantic", "schema", "vector"]
# requires-python is >=3.10; the CI matrix (ci.yml) exercises 3.10/3.11/3.12, and
# tests/test_python_version_support.py keeps these classifiers in lockstep with it.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = [
    # Runtime core: the models are Pydantic v2; documents load via PyYAML
    # (PyYAML also parses JSON, so it covers .json / .yaml / .yml fixtures).
    "pydantic>=2",
    "pyyaml>=6",
    # Justified flow layout hyphenates with Liang patterns (ADR-0003). Pure
    # Python, bundles its dictionaries, deterministic → reproducible golden.
    "pyphen>=0.15",
]

# The render front-door (frameforge/cli.py): `ff-render <doc> --to <target>`
# lists every render path and dispatches to it (`--list` shows live availability).
# Real console scripts since 2.5.0 (the project builds and installs — hatchling
# backend below). `pip install .` / `uv sync` put `ff-render` and `fg-font` on
# PATH; the self-bootstrapping launcher `bin/ff-render` remains for running an
# uninstalled checkout.
[project.scripts]
ff-render = "frameforge.cli:main"
fg-font = "frameforge.fontpack:main"

[project.urls]
Homepage = "https://github.com/pedroanisio/frameforge"
Repository = "https://github.com/pedroanisio/frameforge"
Issues = "https://github.com/pedroanisio/frameforge/issues"

# Optional/auxiliary sets (PEP 735). uv installs `dev` by default on `uv sync`;
# install an auxiliary set explicitly, e.g.:
#   uv sync --group render   # matplotlib proxy renderer (tooling/render_fg_doc.py)
#   uv sync --group browser  # Headless Chromium raster renderer (tooling/render_chromium.py)
#   uv sync --group pdf      # PyMuPDF, for the PDF -> FrameForge transpiler
# or run one-off without syncing: `uv run --group pdf python tooling/pdf_to_frameforge_yml.py ...`
#
# LaTeX/TikZ renderer (tooling/render_latex.py) — NO extra Python deps: it parses
# documents with the core PyYAML and shells out to a system TeX engine (plus
# poppler's `pdftoppm` for --png). It works out of the box with either toolchain;
# `--engine auto` prefers lualatex + luaotfload and otherwise falls back to the
# more widely available pdflatex (the fontspec preamble is rewritten automatically).
#   Debian/Ubuntu system packages:
#     apt install texlive-latex-recommended texlive-pictures \
#                 texlive-fonts-recommended poppler-utils    # pdflatex path
#     apt install texlive-luatex                             # optional: lualatex path
#   then:  uv run python tooling/render_latex.py fixtures/<doc>.fg.yaml --png
[dependency-groups]
dev = [
    "hypothesis>=6",
    "pytest>=8",
    # TOML backport for the gate/tooling that read pyproject.toml. stdlib `tomllib`
    # only exists on 3.11+, and requires-python is >=3.10; without this the guarded
    # `import tomllib / except: import tomli` fallback has nothing to resolve on the
    # 3.10 CI leg. Marked so it is a no-op on 3.11+ (tests/test_python_version_support.py).
    "tomli>=2 ; python_version < '3.11'",
]
render = ["matplotlib>=3.7", "pillow>=10"]
browser = ["playwright>=1.44"]
pdf = ["pymupdf>=1.24"]
# FrameForge -> PDF: combine a document's solved SVG pages into one vector PDF
# (tooling/render_pdf.py). Distinct from the `pdf` group above, which is for PDF
# *input* (the PDF -> FrameForge transpiler). Optional and only imported by that
# tool, so core rendering stays dependency-free.
pdfout = ["cairosvg>=2.7", "pypdf>=4"]
# Real font-advance metrics for accurate text wrap/fit (frameforge.sdk.measure_text
# and render_fixtures.py --real-metrics). Optional: absent it, callers fall back to
# the per-character estimate, so core rendering stays dependency-free (§13).
metrics = ["fonttools>=4"]
# Model Context Protocol server boundary for AI coding feedback loops. Optional:
# the core SDK and renderers do not import it unless frameforge.mcp.create_server()
# is called. CairoSVG is the browser-free PNG rasterizer the render tools fall back
# to when headless Chromium is absent, so a vision model can still see — and thus
# verify — a render without the `browser` group.
mcp = ["mcp[cli]>=1.27,<2", "cairosvg>=2.7"]
# Computer-vision lane: propose draft FrameForge documents from images/PDF pages
# (frameforge.vision). Optional and lazily imported — the classical detectors and
# OCR only load when a propose tool runs; the VLM lane needs no extra dependency
# (stdlib HTTP). `pytesseract` additionally needs the system Tesseract binary;
# PDF input reuses the `pdf` group. numpy ships with opencv.
vision = ["opencv-python-headless>=4.9", "pillow>=10", "pytesseract>=0.3.10"]

# Real packaging (2.5.0): hatchling builds the wheel/sdist from the src layout.
# The wheel ships `frameforge/` only — including `frameforge/model.py` (the
# authoritative Pydantic model) and the `py.typed` marker; `tooling/`, `docs/`,
# and `tests/` stay out of the distribution by construction.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frameforge"]

[tool.uv]
# Real package since 2.5.0: the authoritative model moved INTO the package
# (src/frameforge/model.py), removing the name-shadow hazard that had kept this
# tree a virtual project (`package = false`, codebase-standards §2). `uv sync` /
# `uv run` install the project editable, so `import frameforge` and the console
# scripts work without PYTHONPATH.
package = true

# This environment's package index serves a CORRUPT starlette==1.3.1 (a
# SyntaxError in starlette/datastructures.py) which uv resolves for the `mcp`
# group and which breaks the FastMCP import chain. `mcp` only needs
# starlette>=0.27, so force a clean build. Remove once the index stops serving
# the broken 1.3.1.
override-dependencies = ["starlette<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# ruff config (codebase-standards §16 row 1). `target-version` pins the minimum
# interpreter so version-specific lints match `requires-python = ">=3.10"` (§1).
target-version = "py310"

[tool.ruff.lint]
# Two tiers:
#   * `make lint` runs ruff's full default ruleset (E4/E7/E9/F) informationally
#     (non-gating; the tree still carries F401/F841 findings).
#   * `make ruff-check` (in `make check`) GATES `--select F811` (redefinition) —
#     a real-bug rule with no false positives that protects the source-of-truth
#     model from name collisions (the `Image` alias/class clash, fixed 2026-07-04).
# The gated set is deliberately narrow to start; broadening it to F401/F841 and
# adding `ruff format --check` is this row's documented remaining expansion.
